--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+    --primary--color:rgb(193, 193, 248);
+    --font--color:#fff;
+    }
+
+*{
+    padding:0;
+    margin:0;
+}
+
+html{
+    font-size: 62.5%;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
