--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,23 @@
 <div class="main">
-  <h1 class="photos-header">this one is new</h1>
+  <h1 class="_photos-header">this one is new</h1>
 
-  <div class="main_photos">
+  <div class="_main-photos">
+
 
     <img src="img3.jpeg" class=_img_1>
     <img src="images/img2.jpeg" class=_img_1>
     <img src="images/img2.jpeg" class=_img_1>
 
   </div>
+
+  
+  <section class="_info">
+      <div class="_text">
+        <p class="_first">Lorem ipsum dolor sit fafaf fagfa fafafa </p>
+        <p class="_second">Lorem ipsum dolor sit amcto quod tempora! 
+          Vex fuga inventore, debitis minima mollitia nam commodi accusantium accusamus nobis. 
+        </p>
+      </div>
+    </section>
+
 </div>
